Bug 1409931: nsImageControlFrame can also be using a <map> element. r=xidorn

This goes with a crashtest, as soon as I get a usable build.

MozReview-Commit-ID: LqmPWoJZ7AJ